Override the parent scope custom slot-chip-display property value from none to inline-block to be able to visualize the element and thus preventing content flicker on initial rendering.

--- a/app/board/slot/slot-chip/slot-chip.component.css
+++ b/app/board/slot/slot-chip/slot-chip.component.css
@@ -23,6 +23,9 @@
 }
 
 :host {
+    /* Override external value of none */
+    --slot-chip-display: inline-block;
+    
     --chip-size: clamp(2rem, 3.5vw, 3rem);
     --chip-font-size: max(.75rem, calc(var(--chip-size) / 2.5));
 
@@ -31,8 +34,8 @@
     left: 50%;
     translate: -50% -50%;
 
-    display: inline-block;
-    animation: show .15s ease-in-out;
+    display: var(--slot-chip-display);
+    animation: show .2s ease-in-out;
 }
 
 .chip {
